--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
           
       - name : Building
         run : |
-          mkdir cmake-build-debug 
-          cd cmake-build-gebug
+          mkdir build
+          cd build
           sudo apt-get install -y libgtest-dev
           cmake ..
           make
